@@ -32,14 +32,14 @@ import java.util.List;
 
 public class LookaheadCalc extends JavaCCGlobals {
 
-  static MatchInfo overlap(List v1, List v2) {
+  static MatchInfo overlap(List<MatchInfo> v1, List<MatchInfo> v2) {
     MatchInfo m1, m2, m3;
     int size;
     boolean diff;
     for (int i = 0; i < v1.size(); i++) {
-      m1 = (MatchInfo)v1.get(i);
+      m1 = v1.get(i);
       for (int j = 0; j < v2.size(); j++) {
-        m2 = (MatchInfo)v2.get(j);
+        m2 = v2.get(j);
         size = m1.firstFreeLoc; m3 = m1;
         if (size > m2.firstFreeLoc) {
           size = m2.firstFreeLoc; m3 = m2;
@@ -59,9 +59,9 @@ public class LookaheadCalc extends JavaCCGlobals {
     return null;
   }
 
-  static boolean javaCodeCheck(List v) {
+  static boolean javaCodeCheck(List<MatchInfo> v) {
     for (int i = 0; i < v.size(); i++) {
-      if (((MatchInfo)v.get(i)).firstFreeLoc == 0) {
+      if (v.get(i).firstFreeLoc == 0) {
         return true;
       }
     }
@@ -74,7 +74,7 @@ public class LookaheadCalc extends JavaCCGlobals {
       if (m.match[i] == 0) {
         ret += " <EOF>";
       } else {
-        RegularExpression re = (RegularExpression)rexps_of_tokens.get(new Integer(m.match[i]));
+        RegularExpression re = rexps_of_tokens.get(Integer.valueOf(m.match[i]));
         if (re instanceof RStringLiteral) {
           ret += " \"" + add_escapes(((RStringLiteral)re).image) + "\"";
         } else if (re.label != null && !re.label.equals("")) {
@@ -96,8 +96,8 @@ public class LookaheadCalc extends JavaCCGlobals {
     // dbl[i] and dbr[i] are lists of size limited matches for choice i
     // of ch.  dbl ignores matches with semantic lookaheads (when force_la_check
     // is false), while dbr ignores semantic lookahead.
-    List[] dbl = new ArrayList[ch.getChoices().size()];
-    List[] dbr = new ArrayList[ch.getChoices().size()];
+    List<MatchInfo>[] dbl = new ArrayList[ch.getChoices().size()];
+    List<MatchInfo>[] dbr = new ArrayList[ch.getChoices().size()];
     int[] minLA = new int[ch.getChoices().size()-1];
     MatchInfo[] overlapInfo = new MatchInfo[ch.getChoices().size()-1];
     int[] other = new int[ch.getChoices().size()-1];
@@ -113,7 +113,7 @@ public class LookaheadCalc extends JavaCCGlobals {
         m.firstFreeLoc = 0;
         v = new ArrayList<MatchInfo>();
         v.add(m);
-        LookaheadWalk.genFirstSet(v, (Expansion)ch.getChoices().get(i));
+        LookaheadWalk.genFirstSet(v, ch.getChoices().get(i));
         dbl[i] = LookaheadWalk.sizeLimitedMatches;
       }
       LookaheadWalk.considerSemanticLA = false;
@@ -123,12 +123,12 @@ public class LookaheadCalc extends JavaCCGlobals {
         m.firstFreeLoc = 0;
         v = new ArrayList<MatchInfo>();
         v.add(m);
-        LookaheadWalk.genFirstSet(v, (Expansion)ch.getChoices().get(i));
+        LookaheadWalk.genFirstSet(v, ch.getChoices().get(i));
         dbr[i] = LookaheadWalk.sizeLimitedMatches;
       }
       if (la == 1) {
         for (int i = first; i < ch.getChoices().size()-1; i++) {
-          Expansion exp = (Expansion)ch.getChoices().get(i);
+          Expansion exp = ch.getChoices().get(i);
           if (Semanticize.emptyExpansionExists(exp)) {
             JavaCCErrors.warning(exp, "This choice can expand to the empty token sequence " +
                     "and will therefore always be taken in favor of the choices appearing later.");
@@ -157,24 +157,24 @@ public class LookaheadCalc extends JavaCCGlobals {
       }
     }
     for (int i = first; i < ch.getChoices().size()-1; i++) {
-      if (explicitLA((Expansion)ch.getChoices().get(i)) && !Options.getForceLaCheck()) {
+      if (explicitLA(ch.getChoices().get(i)) && !Options.getForceLaCheck()) {
         continue;
       }
       if (minLA[i] > Options.getChoiceAmbiguityCheck()) {
         JavaCCErrors.warning("Choice conflict involving two expansions at");
-        System.err.print("         line " + ((Expansion)ch.getChoices().get(i)).getLine());
-        System.err.print(", column " + ((Expansion)ch.getChoices().get(i)).getColumn());
-        System.err.print(" and line " + ((Expansion)ch.getChoices().get(other[i])).getLine());
-        System.err.print(", column " + ((Expansion)ch.getChoices().get(other[i])).getColumn());
+        System.err.print("         line " + ch.getChoices().get(i).getLine());
+        System.err.print(", column " + ch.getChoices().get(i).getColumn());
+        System.err.print(" and line " + ch.getChoices().get(other[i]).getLine());
+        System.err.print(", column " + ch.getChoices().get(other[i]).getColumn());
         System.err.println(" respectively.");
         System.err.println("         A common prefix is: " + image(overlapInfo[i]));
         System.err.println("         Consider using a lookahead of " + minLA[i] + " or more for earlier expansion.");
       } else if (minLA[i] > 1) {
         JavaCCErrors.warning("Choice conflict involving two expansions at");
-        System.err.print("         line " + ((Expansion)ch.getChoices().get(i)).getLine());
-        System.err.print(", column " + ((Expansion)ch.getChoices().get(i)).getColumn());
-        System.err.print(" and line " + ((Expansion)ch.getChoices().get(other[i])).getLine());
-        System.err.print(", column " + ((Expansion)ch.getChoices().get(other[i])).getColumn());
+        System.err.print("         line " + ch.getChoices().get(i).getLine());
+        System.err.print(", column " + ch.getChoices().get(i).getColumn());
+        System.err.print(" and line " + ch.getChoices().get(other[i]).getLine());
+        System.err.print(", column " + ch.getChoices().get(other[i]).getColumn());
         System.err.println(" respectively.");
         System.err.println("         A common prefix is: " + image(overlapInfo[i]));
         System.err.println("         Consider using a lookahead of " + minLA[i] + " for earlier expansion.");
@@ -200,7 +200,7 @@ public class LookaheadCalc extends JavaCCGlobals {
       return 0;
     }
     for (int i = 0; i < ch.getChoices().size(); i++) {
-      if (!explicitLA((Expansion)ch.getChoices().get(i))) {
+      if (!explicitLA(ch.getChoices().get(i))) {
         return i;
       }
     }
